RESOLVED FIXED281499
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-vert-001b.html
https://bugs.webkit.org/show_bug.cgi?id=281499
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-vert-...
alan
Reported 2024-10-15 08:47:42 PDT
ssia
Attachments
[fast-cq]Patch (2.39 KB, patch)
2024-10-15 08:53 PDT, alan
no flags
alan
Comment 1 2024-10-15 08:53:12 PDT
Created attachment 472940 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-15 12:04:53 PDT
Committed 285216@main (ac10a0119561): <https://commits.webkit.org/285216@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472940 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-15 12:05:19 PDT
Note You need to log in before you can comment on or make changes to this bug.