[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-vert-001b.html https://bugs.webkit.org/show_bug.cgi?id=281499

Reviewed by Antti Koivisto.

Let's start using max-height value when height is not available or higher.

* Source/WebCore/layout/integration/flex/LayoutIntegrationFlexLayout.cpp:
(WebCore::LayoutIntegration::FlexLayout::layout):

Canonical link: https://commits.webkit.org/285216@main